grammar
ASM = 'asm'
PRINT = 'print'
STRING = ".*"
NUMBER = [0-9]+\.?[0-9]*

program: statements

statements: statements statement
          | statement

statement: asm_statement
         | print_statement
         | expression

asm_statement: ASM ( string_expression )

print_statement: PRINT ( expression )

expression: numeric_expression
          | string_expression

string_expression: string_expression + STRING
                 | string_expression + NUMBER
                 | STRING

numeric_expression: addit

addit: addit + term
     | addit - term
     | - term
     | term

term: term * exponent
    | term / exponent
    | exponent

exponent: exponent ^ factorial
        | factorial

factorial: factorial !
         | fact

primary: ( numeric_expression )
       | NUMBER
